base/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-api
  labels:
    app.kubernetes.io/name: mealie-api
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: mealie-api
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-frontend
  labels:
    app.kubernetes.io/name: mealie-frontend
spec:
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
  selector:
    app.kubernetes.io/name: mealie-frontend
